src/evaluation/logs/full_eval_175603_4294967294.out
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/tilman.kerl/mech-interp/src/evaluation/run_eval.py", line 34
    "feature_index": 11args.feature_index,
                      ^
SyntaxError: invalid decimal literal
